--- a/homework-4/resources/css/main.css
+++ b/homework-4/resources/css/main.css
@@ -120,6 +120,12 @@
 	text-transform: uppercase;
 	margin-right: 134px;
 	cursor: pointer;
+	transition: .2s;
+}
+
+.header-search-button:hover {
+	background: #c9781d;
+	transition: .2s;
 }
 
 .header-addfilm a {
@@ -134,6 +140,12 @@
 	text-transform: uppercase;
 	justify-content: center;
 	align-items: center;
+	transition: .2s;
+}
+
+.header-addfilm a:hover {
+	background: #27be87;
+	transition: .2s;
 }
 
 .content {
@@ -259,4 +271,10 @@
 	text-align: center;
 	font-weight: bold;
 	color: #FFFFFF;
+	transition: .2s;
+}
+
+.movie-list-item-overlay-link:hover {
+	background: #27be87;
+	transition: .2s;
 }
